Fixed zoom level on mobile and team selection bug

--- a/src/index.css
+++ b/src/index.css
@@ -158,6 +158,7 @@ html {
     display: flex;
     align-items: center;
     flex-direction: column;
+    zoom: 90%;
   }
 
   .options {
@@ -181,6 +182,10 @@ html {
     border-radius: 12%;
     background-color: #2e2e2e;
     filter: drop-shadow(0px 0px 30px #5d5337);
+  }
+
+  .title {
+    height: 100px;
   }
 
   .title svg {
